--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
 
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
+
     def activity_version = "1.1.0"
     implementation "androidx.activity:activity-ktx:$activity_version"
 
@@ -87,6 +89,9 @@ dependencies {
     def nav_version = "2.3.0"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-runtime-ktx:$nav_version"
+
+    implementation "androidx.palette:palette-ktx:1.0.0"
 
 
 }
