--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-firestore:6.3.0'
     implementation 'com.google.firebase:firebase-firestore-ktx:21.5.0'
 //    implementation 'com.google.firebase:firebase-firestore:21.5.0'
+    implementation 'com.firebaseui:firebase-ui-auth:6.3.0'
 
 
     // view model
